# ProjetoVisao

./: .gitignore  LICENSE  README.md
VC_TB/: VC_TB.sln
VC_TB/VC_TB/: VC_TB.vcxproj  VC_TB.vcxproj.filters  main.cpp  vc.c  vc.h
VC_TB/enc_temp_folder/5cf77dc6a0f5a87d915350c74fc49e1f/: main.cpp
src/: CMakeLists.txt  main.cpp  vc.c  vc.h
